tests/baselines/reference/genericClasses2.errors.txt
genericClasses2.ts(13,9): error TS2454: Variable 'v1' is used before being assigned.
genericClasses2.ts(14,9): error TS2454: Variable 'v1' is used before being assigned.
genericClasses2.ts(15,9): error TS2454: Variable 'v1' is used before being assigned.


==== genericClasses2.ts (3 errors) ====
    interface Foo<T> {
    	a: T;
    }
    
    class C<T> {
    	public x: T;
    	public y: Foo<T>;
    	public z: Foo<number>;
    }
    
    var v1 : C<string>;
    
    var y = v1.x; // should be 'string'
            ~~
!!! error TS2454: Variable 'v1' is used before being assigned.
    var w = v1.y.a; // should be 'string'
            ~~
!!! error TS2454: Variable 'v1' is used before being assigned.
    var z = v1.z.a; // should be 'number'
            ~~
!!! error TS2454: Variable 'v1' is used before being assigned.